<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:divider="@drawable/ic_divider_0_5dp"
    android:dividerPadding="-16dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:showDividers="middle">

    <LinearLayout
        android:id="@+id/publish_bitrate_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_bitrate"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publish_bitrate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:inputType="number"
            android:backgroundTint="@android:color/transparent"
            android:text="2000"
            android:hint="@string/publish_bitrate_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_url_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_url"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publish_url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/publish_url_hint"
            android:text="rtmp://192.168.33.98:1935/rtmplive/live"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_frame_rate_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_frame_rate"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publish_frame_rate_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:inputType="number"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/publish_frame_rate_hint"
            android:text="30"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_resolution_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_resolution"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publish_resolution_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/publish_resolution_hint"
            android:text="1080x1920"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_record_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_record"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <Switch
            android:id="@+id/publish_record_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/publish_record_switch" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/publish_record_path_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish_record_path"
            android:textColor="#CC555555"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/publish_record_path_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/publish_record_path_hint"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="bottom"
        android:layout_weight="1">

        <Button
            android:id="@+id/save_publish_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>


</LinearLayout>